observe-metrics/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order
    version: v1
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        # TODO: Add annotations for prometheus scraping
    spec:
      containers:
      - name: order
        image: quay.io/youruser/ossm-metrics-order:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: order
